set03/problem02errorlogs.txt
problem02.c: In function 'is_triangle':
problem02.c:34:5: error: expected expression before '{' token
     {
     ^
problem02.c:42:1: error: expected expression before '}' token
 }